--- a/Rush Hour.ipynb
+++ b/Rush Hour.ipynb
@@ -19,8 +19,8 @@
     "from colored import fg, attr\n",
     "import itertools as it\n",
     "\n",
-    "CarColors = [\"CB\", \"CA\", \"C9\", \"C8\", \"C7\", \"C6\", \"C5\", \"C4\", \"C3\",\"C2\",\"C1\", \"RC\"]\n",
-    "TruckColors = [\"T4\", \"T3\", \"T2\", \"T1\"]\n",
+    "CarColors = [\"CI\",\"CH\",\"CG\",\"CF\",\"CE\",\"CD\",\"CC\", \"CB\", \"CA\", \"C9\", \"C8\", \"C7\", \"C6\", \"C5\", \"C4\", \"C3\", \"C2\", \"C1\", \"RC\"]\n",
+    "TruckColors = [\"TI\",\"TH\",\"TG\", \"TF\", \"TE\", \"TD\", \"TC\", \"TB\", \"TA\", \"T9\", \"T8\", \"T7\", \"T6\", \"T5\", \"T4\", \"T3\", \"T2\", \"T1\"]\n",
     "MoveWords = ['one', 'two', 'three', 'four','five', 'six', 'seven', 'eight', 'nine', 'ten']\n",
     "\n",
     "def game_exit():\n",
@@ -386,115 +386,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Welcome to Rush Hour!\n",
-      "\n",
-      "Would you like to solve a traditional or extended board?\n",
-      "\n",
-      "t) Traditional   e) Extended   q) Quit e\n",
-      "What would you like the board dimension to be? Enter a positive integer between 5 and 10.7\n",
-      "What row would you like the red car to be on? Enter a positive integer between 1 and dimension.3\n",
-      "-- -- -- -- -- -- --\n",
-      "-- -- -- -- -- -- --\n",
-      "-- -- -- -- -- -- --\n",
-      "-- -- -- -- -- -- --\n",
-      "-- -- -- -- -- -- --\n",
-      "-- -- -- -- -- -- --\n",
-      "-- -- -- -- -- -- --\n",
-      "\n",
-      "It's time to place your vehicles:\n",
-      "\n",
-      "Let's start with the red car. What position would you like the rear bumper to be in? Enter an integer 1-6.3\n",
-      "\n",
-      "-- -- -- -- -- -- --\n",
-      "-- -- -- -- -- -- --\n",
-      "-- -- \u001b[38;5;1mRC\u001b[0m \u001b[38;5;1mRC\u001b[0m -- -- --\n",
-      "-- -- -- -- -- -- --\n",
-      "-- -- -- -- -- -- --\n",
-      "-- -- -- -- -- -- --\n",
-      "-- -- -- -- -- -- --\n",
-      "\n",
-      "Would you like to place a Car, a Truck, or are you ready to play?\n",
-      "\n",
-      "c) Car   t) Truck   p) Play   e) Exit t\n",
-      "What horizontal position would you like the rear bumper to be in? Enter an integer 1-7.5\n",
-      "What vertical position would you like the rear bumper to be in? Enter an integer 1-7.1\n",
-      "What is the orientation of your truck?\n",
-      "h) Horizontal  v) Vertical v\n",
-      "\u001b[38;5;183m1. Light Purple\u001b[0m\n",
-      "\u001b[38;5;220m2. Yellow\u001b[0m\n",
-      "\u001b[38;5;33m3. Blue\u001b[0m\n",
-      "\u001b[38;5;49m4. Teal\u001b[0m\n",
-      "\n",
-      "Enter the color of your truck 1 through 4:3\n",
-      "\n",
-      "-- -- -- -- \u001b[38;5;33mT1\u001b[0m -- --\n",
-      "-- -- -- -- \u001b[38;5;33mT1\u001b[0m -- --\n",
-      "-- -- \u001b[38;5;1mRC\u001b[0m \u001b[38;5;1mRC\u001b[0m \u001b[38;5;33mT1\u001b[0m -- --\n",
-      "-- -- -- -- -- -- --\n",
-      "-- -- -- -- -- -- --\n",
-      "-- -- -- -- -- -- --\n",
-      "-- -- -- -- -- -- --\n",
-      "\n",
-      "Would you like to place a Car, a Truck, or are you ready to play?\n",
-      "\n",
-      "c) Car   t) Truck   p) Play   e) Exit p\n",
-      "Solved!\n",
-      "\n",
-      "\n",
-      "-- -- -- -- \u001b[38;5;33mT1\u001b[0m -- --\n",
-      "-- -- -- -- \u001b[38;5;33mT1\u001b[0m -- --\n",
-      "-- -- \u001b[38;5;1mRC\u001b[0m \u001b[38;5;1mRC\u001b[0m \u001b[38;5;33mT1\u001b[0m -- --\n",
-      "-- -- -- -- -- -- --\n",
-      "-- -- -- -- -- -- --\n",
-      "-- -- -- -- -- -- --\n",
-      "-- -- -- -- -- -- --\n",
-      "\n",
-      "\u001b[38;5;33mT1\u001b[0m moves down three spaces\n",
-      "\n",
-      "-- -- -- -- -- -- --\n",
-      "-- -- -- -- -- -- --\n",
-      "-- -- \u001b[38;5;1mRC\u001b[0m \u001b[38;5;1mRC\u001b[0m -- -- --\n",
-      "-- -- -- -- \u001b[38;5;33mT1\u001b[0m -- --\n",
-      "-- -- -- -- \u001b[38;5;33mT1\u001b[0m -- --\n",
-      "-- -- -- -- \u001b[38;5;33mT1\u001b[0m -- --\n",
-      "-- -- -- -- -- -- --\n",
-      "\n",
-      "\u001b[38;5;1mRC\u001b[0m moves right three spaces\n",
-      "\n",
-      "-- -- -- -- -- -- --\n",
-      "-- -- -- -- -- -- --\n",
-      "-- -- -- -- -- \u001b[38;5;1mRC\u001b[0m \u001b[38;5;1mRC\u001b[0m\n",
-      "-- -- -- -- \u001b[38;5;33mT1\u001b[0m -- --\n",
-      "-- -- -- -- \u001b[38;5;33mT1\u001b[0m -- --\n",
-      "-- -- -- -- \u001b[38;5;33mT1\u001b[0m -- --\n",
-      "-- -- -- -- -- -- --\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "intro()\n",
-    "setupauto()\n",
-    "setupplayer()\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "intro()\n",
+    "setupauto()\n",
+    "setupplayer()"
+   ]
   }
  ],
  "metadata": {
