--- a/Rush Hour.ipynb
+++ b/Rush Hour.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
     "    \n",
     "    while valid == False:\n",
     "        try:\n",
-    "            redx = int(input(\"Let's start with the red car. What position would you like the rear bumper to be in? Enter an integer 1-\"+str(dims-1)+\".\"))-1\n",
+    "            redx = int(input(\"Let's start with the red car. What position would you like the left bumper to be in? Enter an integer 1-\"+str(dims-1)+\".\"))-1\n",
     "        except:\n",
     "            redx = -1\n",
     "        if 0 <= redx <= (dims - 2):\n",
@@ -138,14 +138,18 @@
     "    \n",
     "    while valid == False:\n",
     "        valid = True\n",
+    "        print(\"What is the orientation of your car?\")\n",
+    "        orientation = input(\"h) Horizontal  v) Vertical \")\n",
+    "        if orientation == \"h\":\n",
+    "            bumper = \"left\"\n",
+    "        else:\n",
+    "            bumper = \"top\"\n",
     "        try:\n",
-    "            bumperx = int(input(\"What horizontal position would you like the rear bumper to be in? Enter an integer 1-\"+str(dims)+\".\"))-1\n",
-    "            bumpery = int(input(\"What vertical position would you like the rear bumper to be in? Enter an integer 1-\"+str(dims)+\".\"))-1\n",
+    "            bumperx = int(input(\"What horizontal position would you like the \"+bumper+\" bumper to be in? Enter an integer 1-\"+str(dims)+\".\"))-1\n",
+    "            bumpery = int(input(\"What vertical position would you like the \"+bumper+\" bumper to be in? Enter an integer 1-\"+str(dims)+\".\"))-1\n",
     "        except:\n",
     "            bumperx = -1\n",
     "            bumpery = -1\n",
-    "        print(\"What is the orientation of your car?\")\n",
-    "        orientation = input(\"h) Horizontal  v) Vertical \")\n",
     "        print(fg(244) + \"1. Grey\" + attr('reset')+ \"\\n\"+ fg(208) + \"2. Orange\" + attr('reset')+ \"\\n\"+ fg(211) + \"3. Pink\" + attr('reset')+ \"\\n\"+ fg(99) + \"4. Purple\" + attr('reset')+ \"\\n\"+ fg(29) + \"5. Green\" + attr('reset')+ \"\\n\"+ fg(120) + \"6. Light Green\" + attr('reset')+ \"\\n\"+ fg(106) + \"7. Pea Green\" + attr('reset')+ \"\\n\"+ fg(95) + \"8. Brown\" + attr('reset')+ \"\\n\"+ fg(223) + \"9. Beige\" + attr('reset')+ \"\\n\"+ fg(227) + \"10. Light Yellow\" + attr('reset')+ \"\\n\"+ fg(81) + \"11. Light Blue\" + attr('reset')+ \"\\n\")\n",
     "        try:\n",
     "            colornum = int(input(\"Enter the color of your car 1 through 11:\"))\n",
@@ -203,14 +207,18 @@
     "    \n",
     "    while valid == False:\n",
     "        valid = True\n",
+    "        print(\"What is the orientation of your truck?\")\n",
+    "        orientation = input(\"h) Horizontal  v) Vertical \")\n",
+    "        if orientation == \"h\":\n",
+    "            bumper = \"left\"\n",
+    "        else:\n",
+    "            bumper = \"top\"\n",
     "        try:\n",
-    "            bumperx = int(input(\"What horizontal position would you like the rear bumper to be in? Enter an integer 1-\"+str(dims)+\".\"))-1\n",
-    "            bumpery = int(input(\"What vertical position would you like the rear bumper to be in? Enter an integer 1-\"+str(dims)+\".\"))-1\n",
+    "            bumperx = int(input(\"What horizontal position would you like the \"+bumper+\" bumper to be in? Enter an integer 1-\"+str(dims)+\".\"))-1\n",
+    "            bumpery = int(input(\"What vertical position would you like the \"+bumper+\" bumper to be in? Enter an integer 1-\"+str(dims)+\".\"))-1\n",
     "        except:\n",
     "            bumperx = -1\n",
     "            bumpery = -1\n",
-    "        print(\"What is the orientation of your truck?\")\n",
-    "        orientation = input(\"h) Horizontal  v) Vertical \")\n",
     "        print(fg(183) + \"1. Light Purple\" + attr('reset') + \"\\n\" + fg(220) + \"2. Yellow\" + attr('reset')+ \"\\n\"+ fg(33) + \"3. Blue\" + attr('reset')+ \"\\n\"+ fg(49) + \"4. Teal\"+ attr('reset') + \"\\n\")\n",
     "        try:\n",
     "            colornum = int(input(\"Enter the color of your truck 1 through 4:\"))\n",
@@ -387,9 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "intro()\n",
